--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -234,7 +234,7 @@ hr{
 }
 
 .diamond-sponsors {
-  background-color: white;
+  background-color: black;
   padding: 1vh;
   text-align:center;
 }
@@ -245,7 +245,7 @@ hr{
 }
 
 .platinum-sponsors {
-  background-color: white;
+  background-color: black;
   padding: 1vh;
   text-align:center;
 }
@@ -256,7 +256,7 @@ hr{
 }
 
 .gold-sponsors {
-  background-color: white;
+  background-color: black;
   padding: 1vh;
   text-align:center;
 }
@@ -267,7 +267,7 @@ hr{
 }
 
 .silver-sponsors {
-  background-color: white;
+  background-color: black;
   padding: 1vh;
   text-align:center;
 }
@@ -279,7 +279,7 @@ hr{
 
 
 .bronze-sponsors {
-  background-color: white;
+  background-color: black;
   padding: 1vh;
   text-align:center;
 }
